# agentdemo

./: README.md  pyproject.toml  requirements.txt
src/app/: docker-compose.yml
src/app/be/: Dockerfile  main.py
src/app/be/services/: rag.py
src/app/fe/: Dockerfile  app.py
