[project]
name = "langchain-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.10"

[tool.poetry]
packages = [{include = "app", from = "src"}]


[tool.poetry.dependencies]
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
langchain = "^0.3.26"
chromadb = "^1.0.13"
faiss-cpu = "^1.11.0"
langchain-community = "^0.3.26"
langchain-ollama = "^0.3.3"
streamlit = "^1.46.0"
gradio = "^5.34.2"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
